--- a/settings.html
+++ b/settings.html
@@ -6,8 +6,6 @@
     <title>Settings - ISP Media Hub</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <!-- Add SortableJS for drag and drop -->
-    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 <body>
     <header>
@@ -29,7 +27,7 @@
     <div class="container">
         <div class="settings-section">
             <h2><i class="fas fa-sort"></i> Server Sorting</h2>
-            <p>Drag and drop servers to reorder them, or use the up/down buttons.</p>
+            <p>Set your preferred server order. Use the up/down buttons to rearrange servers.</p>
             
             <div class="category-tabs">
                 <div class="tab active" data-category="all">
